--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/ulibrary
-spring.datasource.username = wcastaneda
-spring.datasource.password = W@@rrior2023
+#spring.datasource.url = jdbc:mysql://localhost:3306/ulibrary
+#spring.datasource.username = wcastaneda
+#spring.datasource.password = W@@rrior2023
 
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.hibernate.SQL=DEBUG	
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ulibrary
+spring.datasource.username=wcastaneda
+spring.datasource.password=W@@rrior2023
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
